# elecSim

./: .gitignore  CMakeLists.txt  Ideas.md  LICENSE  PendingChanges.md  README.md  THIRD_PARTY_LICENSES  clone_dependencies.bat  clone_dependencies.sh  elecSim.cppcheck  output.txt
.github/workflows/: cmake-multi-platform.yml  cmake.yml
cmake/: PGE.cmake  blobber.cmake  deps.cmake  early_deps.cmake
examples/: ControlManagerIntegration.cpp  adder.grid  componentGallery.grid  stresstest.grid  tests.grid
examples/tests/: circularTest.grid  componentTest.grid  componentTest.probe  fulladderTest.grid  fulladderTest.probe
include/: CMakeLists.txt
include/hope/: CMakeLists.txt  hope.c
media/: ArrowTile.mesh  CrossingTile.mesh
notes/: ConceptSeparation.md
src/: CMakeLists.txt  Grid.cpp  Grid.h  GridTile.cpp  GridTile.h  GridTileTypes.cpp  GridTileTypes.h  MessageBox.cpp  Tile.cpp  Tile.h  Tiles.cpp  Tiles.h  main.cpp  main.cpp.old  olcPixelGameEngine.h  pch.h
src/PGE/: CMakeLists.txt  PGE.cpp  olcPixelGameEngine.h
src/engine/: BLOB_font.h  CMakeLists.txt  ConceptSeparation.md  ControlManager.cpp  ControlManager.h  Drawables.cpp  Drawables.h  Game.cpp  Game.h  GameStates.cpp  GameStates.h  KeyState.cpp  MouseState.cpp  MouseState.h  RenderManager.h  TileChunk.cpp
src/engine/obsoleted/: MessageBox.cpp
src/game/: CMakeLists.txt  main.cpp
src/game/engine/: ChoiceMessageBox.cpp  ChoiceMessageBox.h  Drawables.cpp  Drawables.h  Game.cpp  Game.h  KeyState.cpp  KeyState.h  MouseState.cpp  MouseState.h  TileChunk.cpp  TileChunk.h  TileChunkManager.cpp  TileChunkManager.h  TilePreviewRenderer.cpp  TilePreviewRenderer.h  meshes.cpp  meshes.h
src/game/engine/obsoleted/: ControlManager.cpp  ControlManager.h  MessageBox.h  RenderManager.h
src/libElecSim/: CMakeLists.txt  Common.cpp  Common.h  Grid.cpp  Grid.h  GridTile.cpp  GridTile.h  GridTileTypes.cpp  GridTileTypes.h  TileGroupManager.cpp  TileGroupManager.h  v2d.cpp  v2d.h
src/prober/: CMakeLists.txt  prober_main.cpp
tools/: CMakeLists.txt
tools/blobber/: CMakeLists.txt  blobber.c
