# -----------------------------------------------------------------------------
# Subdirectories
# -----------------------------------------------------------------------------

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/libElecSim)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/prober)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/game)